--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -991,7 +991,7 @@ li {
 /*                      SECTION CUSTOMERS                          */
 /*-----------------------------------------------------------------*/
 .customers {
-    background: url(http://placehold.it/740x270) center left no-repeat;
+    background: url(/assets/images/banner3.jpg) center left no-repeat;
     background-size: cover;
 }
 
